--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Certificados CFJI</title>
+  <title>Certificados EJRLB - CFJI</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -30,7 +30,6 @@
           <button type="submit">Buscar</button>
         </div>
         <p class="hint">Si la búsqueda es por nombre, puedes escribir nombre y/o apellido.</p>
-        <p class="hint">Derechos Reservados - Creaciones Manotas</p>
       </form>
     </section>
 
@@ -51,7 +50,8 @@
     </section>
 
     <footer class="footer">
-      <p>Consulta interna para certificaciones CFJI.</p>
+      <p>Consulta interna para certificaciones de los CFJI.</p>
+      <p>Derechos Reservados - Creaciones Manotas</p>
     </footer>
   </div>
 
